# aupyo

./: LICENSE  README.md  pyproject.toml  setup.py
aupyo/core/: __init__.py  mixture.py
aupyo/types/: __init__.py  track.py
