[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aupyo"
version = "0.1.0"
description = "A Python package for audio processing utilities."
authors = [{ name = "Etienne-bdt", email = "aupyo@ebardet.fr" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "librosa",
    "numpy",
    "scipy",
    "matplotlib",
    "soundfile"
]

[tool.setuptools]
packages = ["aupyo"]